--- a/Maximum Ratio Combining.ipynb
+++ b/Maximum Ratio Combining.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "_Author:_ Karl-Ludwig Besser, Technische Universität Braunschweig\n",
     "\n",
-    "This notebook is part of the paper \"On Fading Channel Dependency Structures with a Positive Zero-Outage Capacity\" ([arXiv:XXX](https://arxiv.org)).  \n",
+    "This notebook is part of the paper \"On Fading Channel Dependency Structures with a Positive Zero-Outage Capacity\" ([arXiv:2102.02541](https://arxiv.org/abs/2102.02541)).  \n",
     "If you use any of this work, please cite the above paper."
    ]
   },
@@ -435,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
